// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ExperienceSection with all props 1`] = `
<article
  className="experienceSection"
>
  <header
    className="experienceSection__header"
  >
    <img
      className="experienceSection__logo"
      src="Logo"
    />
    <div
      className="experienceSection__info"
    >
      <h2
        className="experienceSection__company"
      >
        Company
      </h2>
      <h4
        className="experienceSection__jobTitle"
      >
        jobTitle
      </h4>
    </div>
  </header>
  <section
    className="experienceSection__description"
    data-active={false}
  >
    <p>
      Description
    </p>
  </section>
  <footer
    className="experienceSection__footer"
    data-active={false}
    onClick={[Function]}
  >
    <p>
      ⮟
    </p>
  </footer>
</article>
`;

exports[`Render ExperienceSection with company 1`] = `
<article
  className="experienceSection"
>
  <header
    className="experienceSection__header"
  >
    <div
      className="experienceSection__info"
    >
      <h2
        className="experienceSection__company"
      >
        Company
      </h2>
    </div>
  </header>
  <section
    className="experienceSection__description"
    data-active={false}
  >
    <p />
  </section>
  <footer
    className="experienceSection__footer"
    data-active={false}
    onClick={[Function]}
  >
    <p>
      ⮟
    </p>
  </footer>
</article>
`;

exports[`Render ExperienceSection with description 1`] = `
<article
  className="experienceSection"
>
  <header
    className="experienceSection__header"
  >
    <div
      className="experienceSection__info"
    >
      <h2
        className="experienceSection__company"
      />
    </div>
  </header>
  <section
    className="experienceSection__description"
    data-active={false}
  >
    <p>
      Description
    </p>
  </section>
  <footer
    className="experienceSection__footer"
    data-active={false}
    onClick={[Function]}
  >
    <p>
      ⮟
    </p>
  </footer>
</article>
`;

exports[`Render ExperienceSection with job title 1`] = `
<article
  className="experienceSection"
>
  <header
    className="experienceSection__header"
  >
    <div
      className="experienceSection__info"
    >
      <h2
        className="experienceSection__company"
      />
      <h4
        className="experienceSection__jobTitle"
      >
        jobTitle
      </h4>
    </div>
  </header>
  <section
    className="experienceSection__description"
    data-active={false}
  >
    <p />
  </section>
  <footer
    className="experienceSection__footer"
    data-active={false}
    onClick={[Function]}
  >
    <p>
      ⮟
    </p>
  </footer>
</article>
`;

exports[`Render ExperienceSection with logo 1`] = `
<article
  className="experienceSection"
>
  <header
    className="experienceSection__header"
  >
    <img
      className="experienceSection__logo"
      src="Logo"
    />
    <div
      className="experienceSection__info"
    >
      <h2
        className="experienceSection__company"
      />
    </div>
  </header>
  <section
    className="experienceSection__description"
    data-active={false}
  >
    <p />
  </section>
  <footer
    className="experienceSection__footer"
    data-active={false}
    onClick={[Function]}
  >
    <p>
      ⮟
    </p>
  </footer>
</article>
`;

exports[`Render ExperienceSection with start and end date 1`] = `
<article
  className="experienceSection"
>
  <header
    className="experienceSection__header"
  >
    <div
      className="experienceSection__info"
    >
      <h2
        className="experienceSection__company"
      />
      <h5
        className="experienceSection__dates"
      >
        startDate
         
        - endDate
      </h5>
    </div>
  </header>
  <section
    className="experienceSection__description"
    data-active={false}
  >
    <p />
  </section>
  <footer
    className="experienceSection__footer"
    data-active={false}
    onClick={[Function]}
  >
    <p>
      ⮟
    </p>
  </footer>
</article>
`;

exports[`Render ExperienceSection with start date 1`] = `
<article
  className="experienceSection"
>
  <header
    className="experienceSection__header"
  >
    <div
      className="experienceSection__info"
    >
      <h2
        className="experienceSection__company"
      />
      <h5
        className="experienceSection__dates"
      >
        startDate
         
      </h5>
    </div>
  </header>
  <section
    className="experienceSection__description"
    data-active={false}
  >
    <p />
  </section>
  <footer
    className="experienceSection__footer"
    data-active={false}
    onClick={[Function]}
  >
    <p>
      ⮟
    </p>
  </footer>
</article>
`;

exports[`Render ExperienceSection without props 1`] = `
<article
  className="experienceSection"
>
  <header
    className="experienceSection__header"
  >
    <div
      className="experienceSection__info"
    >
      <h2
        className="experienceSection__company"
      />
    </div>
  </header>
  <section
    className="experienceSection__description"
    data-active={false}
  >
    <p />
  </section>
  <footer
    className="experienceSection__footer"
    data-active={false}
    onClick={[Function]}
  >
    <p>
      ⮟
    </p>
  </footer>
</article>
`;
